name:                raphaelnova
version:             0.1.0.0
synopsis:            Raphael Nova's personal website
description:         Raphael Nova's personal website
homepage:            http://raphaelnova.info
license:             AllRightsReserved
license-file:        LICENSE
author:              Raphael Nova
maintainer:          rafa.boanova@gmail.com
copyright:           © 2014 Raphael Nova
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable main
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base   >= 4.7 && < 4.8,
                       hakyll >= 4.6 && < 4.7
